tests/build/fail/multi-args-attr.rs
use ref_destruct::*;

#[ref_destruct(MyStructRef, MyStructMut)]
struct MyStruct {
    x: i32,
}

fn main() {}